Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9867

Assertion 'ref == 0' failed in shell32 -- shell folder reference leaks

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell
    • 68,210

    Description

      Еrror setting the wallpaper - bootcd-68246-dbg
      Backgrounds set. After the error message appears.

      Attachments

        1. 1.png
          453 kB
          Start
        2. debug-r68246.log
          62 kB
          Start
        3. 2.png
          200 kB
          Start
        4. debug-r68209.log
          50 kB
          Start
        5. debug-r68215.log
          52 kB
          Start
        6. debug-r68279.log
          48 kB
          Start

        Issue Links

          Activity

            People

              ThFabba ThFabba
              Start Start
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: