[SHELL32] - Fix shell folder reference leak in SHGetFileInfoW CORE-9867

svn path=/trunk/; revision=68260